<resources>
    <string name="app_name">JWC FISHERIES</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_price"><u>Price</u></string>
    <string name="view_cart">VIEW CART</string>
    <string name="place_order">Place Order</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="cost">Cost</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_may_i_help_you">How May I help You ?</string>
    <string name="transaction_id">TRANSACTION_ID</string>
    <string name="associate_user">Associate User</string>
    <string name="add_user_details">ADD USER DETAILS</string>
    <string name="new_user_flag">NEW_USER_FLAG</string>
    <string name="cellphone_number">CELLPHONE NUMBER</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="unable_to_deliver">We Are Unable To Deliver To Your Area.</string>
    <string name="out_bounds">AREA OUT OF REACH</string>
    <string name="create_user">CREATE USER</string>
    <string name="enable_device_location">Enable Device Location</string>
    <string name="confirm_order">CONFIRM ORDER</string>

    <string-array name="address_validator_1">
        <item>street</item>
        <item>str</item>
        <item>road</item>
        <item>rd</item>
        <item>thoroughfare</item>
        <item>way</item>
        <item>avenue</item>
        <item>ave</item>
        <item>drive</item>
        <item>drive</item>
        <item>row</item>
        <item>crescent</item>
        <item>terrace</item>
        <item>close</item>
        <item>parade</item>
        <item>side street</item>
        <item>side road</item>
        <item>alley</item>
        <item>boulevard</item>
    </string-array>
</resources>
